hphp/test/zend/good/Zend/tests/traits/conflict003.php.expectf

Fatal error: Method 'smallTalk' declared in multiple traits (A, B) in %s/conflict003.php on line 22
